2001-02-17  Paul Jarc <prj@po.cwru.edu>
	Committed by ShengHuo ZHU  <zsh@cs.rochester.edu>

	* message.el (message-get-reply-headers): Fix bug with
	Mail-Followup-To/to-address interaction.

2001-02-17 13:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-msg.el (gnus-configure-posting-styles): Match header in
	gnus-article-copy.

2001-02-16 22:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* message.el (message-do-send-housekeeping): Rename to a better
	name.

2001-02-16 18:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* message.el (message-cancel-news): Check article first, then ask
	yes or no.

2001-02-16 14:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mm-uu.el (mm-uu-type-alist): Add emacs-sources.

2001-02-16 11:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-range.el (gnus-range-normalize): New function.

2001-02-15  NAGY Andras <nagya@inf.elte.hu>

	* imap.el (imap-gssapi-open): Set imap-c-l-s-first.

2001-02-14 21:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-srvr.el (gnus-server-regenerate-server): Use gnus-get-function.

	* nnagent.el (nnagent-request-regenerate): New.

	* nnfolder.el (nnfolder-request-regenerate): Deffoo.

	* nnml.el (nnml-generate-nov-databases): Accept argument
	server. Don't open server if it is opened.
	(nnml-request-regenerate): Use it. Change to deffoo.

2001-02-14  Katsumi Yamaoka <yamaoka@jpl.org>
        Committed by ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus.el (gnus-define-group-parameter): Fix.

2001-02-14 15:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus.el (gnus-define-group-parameter): Improved.

	* gnus-sum.el (charset): Define parameter.
	(ignored-charsets): Ditto.
	(gnus-summary-setup-default-charset): Use them.

	* gnus-start.el (gnus-read-descriptions-file): Use them.
	
	* gnus-cus.el (gnus-group-parameters): Remove them.

2001-02-14 00:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-sum.el (gnus-summary-print-article): Redo highlight.
